Modernize Glazed Lists iteration